--- a/src/components/core/LayoutWidthToggle.astro
+++ b/src/components/core/LayoutWidthToggle.astro
@@ -1,6 +1,10 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Button } from "@/components/ui/button";
+import type { LayoutWidthToggleProps } from "@/lib/types";
+
+// Component accepts no props
+Astro.props as LayoutWidthToggleProps;
 ---
 
 <Button
