--- a/src/components/markdown/MdxLink.astro
+++ b/src/components/markdown/MdxLink.astro
@@ -1,11 +1,7 @@
 ---
-interface Props {
-    href?: string;
-    class?: string;
-    [key: string]: unknown;
-}
+import type { MdxLinkProps } from "@/lib/types";
 
-const { href = "", class: className, ...rest } = Astro.props;
+const { href = "", class: className, ...rest } = Astro.props as MdxLinkProps;
 
 /**
  * Determines if a URL is external.
