--- a/src/components/docs/SidebarGroup.astro
+++ b/src/components/docs/SidebarGroup.astro
@@ -2,7 +2,7 @@
 import SidebarEntry from "./SidebarEntry.astro";
 import DocIcon from "./DocIcon.astro";
 import { Icon } from "astro-icon/components";
-import type { SidebarGroupProps, SidebarGroupItem } from "@/lib/types";
+import type { SidebarGroupProps, SidebarGroupItem } from "@/lib/docs/types";
 
 const { group, currentSlug, level = 0 } = Astro.props as SidebarGroupProps;
 
