--- a/src/components/docs/TableOfContents.astro
+++ b/src/components/docs/TableOfContents.astro
@@ -1,5 +1,5 @@
 ---
-import type { TableOfContentsProps } from "@/lib/types";
+import type { TableOfContentsProps } from "@/lib/docs/types";
 
 const { headings = [] } = Astro.props as TableOfContentsProps;
 
