--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import HeadSEO from "@/components/core/HeadSEO.astro";
 import Header from "@/components/core/Header.astro";
 
 import { LOCALE, SITE } from "@data/config";
-import type { BaseLayoutProps } from "@/lib/types";
+import type { BaseLayoutProps } from "@/lib/docs/types";
 
 const {
     title,
